--- a/styles.css
+++ b/styles.css
@@ -45,9 +45,11 @@ nav ul {
     display:inline-flex;
     flex:3; 
     align-items: center;
+
 }
 nav a {   
     text-decoration: none;
+
     color: white;
     flex: 1;
     display: inline-flex;
@@ -56,6 +58,7 @@ nav a {
 
 nav li, nav a {
     width: 100%;
+    text-align: center;
 }
 
 /*------------------For the index page ------------------*/
@@ -109,6 +112,12 @@ article {
 
 }
 
+article:nth-of-type(1) p:nth-of-type(2){
+font-weight: bold;
+color: blue;
+
+}
+
 article > img {
     display: block;
     margin-left: auto;
@@ -127,17 +136,24 @@ article > img {
 h3 {
     width:100%;
     display:block;
-    text-align: center;
-    
+    text-align: center;    
 }
 
 aside {
     background-color: white;
     padding-top:4em;
     width: 30%;
-
 }
 
+aside > ul > li:nth-of-type(1){
+    color: yellow;
+}
+aside > ul > li:nth-of-type(2){
+    color: red;
+}
+aside > ul > li:nth-of-type(3){
+    color:blue;
+}
 .country-container 
 {
 padding-bottom: 1em;
@@ -152,5 +168,60 @@ text-decoration: underline;
 
 main {
 
+    padding-top: 1em;
     min-height: 850px;
+    background-color: #099C81;
 }
+
+form {
+    margin-top: .5em;
+    margin-left: 1em;
+    padding: 2em;
+    background-color: #065C4C;
+    display:block;
+    width:60%;
+    border: 2px solid white;
+    border-radius: 20px;
+}
+
+input {
+    border:1px solid black;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left:.5em;
+    width: 90%;
+    height:3em;
+    font-size: 1.2em;
+}
+
+input:nth-of-type(1){
+    border-radius: 10px 10px 0 0 ;
+}
+input:nth-of-type(2){
+    border-radius: 0px 0px 10px 10px ;
+    margin-bottom:1em;
+}
+
+button {
+    display:inline-block;
+    margin-left: 1em;
+    height: 2em;
+    color: #fff;
+    border-radius: 10px;
+    font-size: 1.2em;
+    font-weight: bold;
+    border:1px solid white;
+}
+
+button:hover{
+    cursor: pointer;
+}
+
+button:nth-of-type(1){
+background-color: red;
+
+}
+button:nth-of-type(2){
+    background-color: green;   
+    }
